<resources>
    <string name="app_name">Unfold</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non est vulputate augue elementum euismod. Donec luctus, augue vitae sollicitudin volutpat, sapien felis egestas nibh, eu volutpat purus ligula id erat. Phasellus viverra, lorem sed rutrum ultrices, nisi nulla pharetra ipsum, id tempor eros velit eget quam. Pellentesque non massa purus. Ut elit tellus, scelerisque ac tincidunt et, dignissim vitae sapien. Pellentesque venenatis metus ut turpis commodo hendrerit. Proin ex nunc, ultricies at ornare ut, blandit sit amet enim. Pellentesque tempor eros magna, eget porttitor ipsum lobortis eu. Aenean suscipit sodales magna a rutrum. Suspendisse vel ligula eleifend, sodales nibh quis, mattis tortor. Phasellus luctus leo dolor, at pretium augue varius sit amet. Fusce aliquam sapien vitae leo malesuada gravida. Nunc nec justo vel nibh molestie hendrerit ut sit amet est. Curabitur ut rutrum tellus.</string>

    <string name="adventure_add_rating">Oceń przygodę:</string>
    <string name="adventure_author">Author:</string>
    <string name="adventure_position">Miejsce:</string>
    <string name="adventure_summary_finish">Zakończ przygodę</string>
    <string name="adventure_summary_title">Posumowanie</string>
    <string name="adventure_user_ranking_completion_time">Twój czas:</string>
    <string name="authentication_code_label">kod</string>
    <string name="authentication_email_label">email</string>
    <string name="authentication_have_code">mam już kod</string>
    <string name="authentication_login">zaloguj</string>
    <string name="authentication_new_password_label">nowe hasło</string>
    <string name="authentication_password_confirmation_label">powtórz hasło</string>
    <string name="authentication_password_label">hasło</string>
    <string name="authentication_reset_password">Resetuj hasło</string>
    <string name="authentication_send_code">wyślij kod</string>
    <string name="authentication_signin">logowanie</string>
    <string name="authentication_signup">rejestracja</string>
    <string name="authentication_username_label">nick</string>
    <string name="common_apply">Zastosuj</string>
    <string name="common_change">Zmień</string>
    <string name="common_close">Zamknij</string>
    <string name="common_confirm">Zatwierdź</string>
    <string name="common_filter">filtruj</string>
    <string name="common_filters">Filtry</string>
    <string name="common_free">darmowa</string>
    <string name="common_go_back">Wróć</string>
    <string name="common_no">nie</string>
    <string name="common_no_translation">brak tłumaczenia</string>
    <string name="common_ok">OK</string>
    <string name="common_place">miejsce</string>
    <string name="common_reset">Wyczyść</string>
    <string name="common_save">Zapisz</string>
    <string name="common_settings">Ustawienia</string>
    <string name="common_sort">sortuj</string>
    <string name="common_yes">tak</string>
    <string name="difficulty_level_easy">łatwy</string>
    <string name="difficulty_level_hard">trudny</string>
    <string name="difficulty_level_medium">średni</string>
    <string name="error_something_went_wrong">Coś poszło nie tak</string>
    <string name="journal_cannot_open_url">Nie udało się otworzyć adresu</string>
    <string name="journal_exit">Wyjdź z przygody</string>
    <string name="journal_exit_info">Po wyjściu z przygody, czas nadal będzie naliczany. Czy jesteś pewny, że chcesz wyjść z przygody?</string>
    <string name="journal_tab_desc">Opis</string>
    <string name="journal_tab_progress">Postęp</string>
    <string name="location_access_denied">Aby działać poprawnie, aplikacja wymaga dostępu do lokalizacji. Przejdź do ustawień swojego urządzenia, aby zezwolić aplikacji na dostęp do informacji o lokalizacji tego urządzenia.</string>
    <string name="location_access_explanation">Aby działać poprawnie, aplikacja wymaga dostępu do lokalizacji.</string>
    <string name="location_error_occured">Wystąpił błąd podczas pobierania lokalizacji.</string>
    <string name="login_submit">Zaloguj się</string>
    <string name="menu_about">O aplikacji</string>
    <string name="menu_adventure_list">Lista przygód</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_notifications">Notyfikacje</string>
    <string name="menu_shop">Sklep</string>
    <string name="menu_username">Nickname:</string>
    <string name="puzzle_input_label">Hasło:</string>
    <string name="puzzle_cryptex_lock_tutorial_1">W celu rozwiązania tej zagadki należy ułożyć  litery w odpowiedniej kolejności. Litery układamy w rzędzie z czerwonym paskiem w tle. Każdy slot można przesuwać w górę i w dół.</string>
    <string name="puzzle_cryptex_lock_tutorial_2">Po ułożeniu hasła, kliknij „zatwierdź”. Jeśli usłyszysz  szczęk otwieranego zamka, oznacza to, że hasło było prawidłowe i możesz przejść dalej.</string>
    <string name="puzzle_cryptex_lock_tutorial_title">Kłódka z hasłem literowym</string>
    <string name="puzzle_number_lock_tutorial_1">W celu rozwiązania tej zagadki należy ułożyć  cyfry w odpowiedniej kolejności. Cyfry układamy w rzędzie z czerwonym paskiem w tle. Wystarczy przesunąć palcem rządek, aby przestawić cyfry.</string>
    <string name="puzzle_number_lock_tutorial_2">Po ułożeniu kodu, kliknij „zatwierdź”. Jeśli usłyszysz  szczęk otwieranego zamka, brawo! Oznacza to, że kod był prawidłowy i możesz przejść dalej.</string>
    <string name="puzzle_number_lock_tutorial_title">Kłódka szyfrowa</string>
    <string name="puzzle_number_push_lock_tutorial_1">W celu rozwiązania tej zagadki należy wcisnąć odpowiednią kombinację cyfr.</string>
    <string name="puzzle_number_push_lock_tutorial_2">Kolejność wciskania cyfr nie ma znaczenia, ważne jest wciśnięcie odpowiednich cyfr na mechaniźmie.</string>
    <string name="puzzle_number_push_lock_tutorial_title">Kłódka z kodem numerycznym</string>
    <string name="puzzle_direction_lock_tutorial_1">Aby rozwiązać tę zagadkę, należy przytrzymać palcem okrąg na środku kłódki i przesunąć mechanizm w odpowiednim kierunku. Mechanizm można przesunąć w cztery kierunki. W prawo i lewo oraz w górę i dół. Nie można poruszać się po ukosach. Jeśli mechanizm nie wydał dźwięku po przesunięciu, oznacza to, że nie został on przesunięty wystarczająco mocno, należy więc przesunąć go jeszcze raz w odpowiednim kierunku.</string>
    <string name="puzzle_direction_lock_tutorial_title">Kłódka na kombinację ruchów</string>
    <string name="puzzle_wrong_answer">Podana odpowiedź jest nieprawidłowa.</string>
    <string name="search_adventures_tab">trasy</string>
    <string name="search_close_by">blisko ciebie</string>
    <string name="search_creators_tab">twórcy</string>
    <string name="search_name_input_placeholder">Nazwa</string>
    <string name="sort_rating">ocena</string>
    <string name="sort_difficulty_level">poziom trudności</string>
    <string name="sort_range">zasięg</string>
    <string name="user_adventures_completed">zakończone</string>
    <string name="user_adventures_purchased">zakupione</string>
    <string name="user_adventures_started">rozpoczęte</string>
    <string name="user_adventures_title">Lista Twoich przygód</string>
    <string name="user_profile_avatar_label">Avatar</string>
    <string name="user_profile_edit">Edytuj profil</string>
    <string name="user_profile_finished_adventures">Skończone trasy</string>
    <string name="user_profile_updated">Zaktualizowano profil</string>
    <string name="user_profile_username_label">Nazwa użytkownika</string>
    <string name="puzzle_direction_lock_reset">Zresetowano kłódkę</string>

    <string name="map_legend_title">Legenda</string>
    <string name="map_legend_user">znacznik użytkownika</string>
    <string name="map_legend_free_not_started">znacznik trasy darmowej, nierozpoczętej</string>
    <string name="map_legend_free_started">znacznik trasy darmowej, rozpoczętej</string>
    <string name="map_legend_free_finished">znacznik trasy darmowej, zakończonej</string>
    <string name="map_legend_paid_not_started">znacznik trasy płatnej, nierozpoczętej</string>
    <string name="map_legend_paid_started">znacznik trasy płatnej, rozpoczętej</string>
    <string name="map_legend_paid_finished">znacznik trasy płatnej, zakończonej</string>
    <string name="map_legend_adventure_not_solved">znacznik nierozwiązanego punktu</string>
    <string name="map_legend_adventure_solved">znacznik rozwiązanego punktu</string>
    <string name="map_legend_adventure_location_checker">przycisk sprawdzający obecność punktu przygody w pobliżu Twojej lokalizacji</string>

    <string name="puzzle_correct_answer_title">Gratulacje!</string>
    <string name="puzzle_correct_answer_message">Świetna robota, rozwiązałeś zagadkę!\n\nTeraz możesz przejść do Dziennika i zacząć analizować kolejną porcję wskazówek.\n\nTrzymamy kciuki i wierzymy, że Ci się uda.</string>
    <string name="puzzle_correct_answer_button">Wróć do Dziennika</string>
    <string name="puzzle_correct_answer_message_summary">Świetna robota, rozwiązałeś zagadkę, a tym samym całą przygodę!\n\nTeraz możesz przejść do podsumowania i zobaczyć jak wypadłeś na tle innych graczy oraz ocenić tę przygodę.</string>
    <string name="puzzle_correct_answer_summary_button">Idź do podsumowania</string>

    <string name="error_unknown_codes">Nieznane kody błędów:</string>
    <string name="error_point_not_found">Jesteś za daleko punktu.\nPodejdź bliżej.</string>

    <string name="adventure_no_rating">brak ocen</string>
    <string name="creator_profile_adventures">trasy</string>

</resources>
