<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authentication_background">

    <pl.reconizer.unfold.presentation.authentication.AuthenticationInput
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:label="@string/authentication_email_label"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline"/>

    <Button
        android:id="@+id/sendCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/AuthenticationButton"
        android:text="@string/authentication_send_code"
        android:layout_marginTop="54dp"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <Button
        android:id="@+id/secondStepButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/AuthenticationButton"
        android:text="@string/authentication_have_code"
        android:layout_marginTop="@dimen/space_md"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/sendCodeButton" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_md"
        android:paddingTop="@dimen/space_md"
        android:paddingEnd="@dimen/space_sm"
        android:paddingBottom="@dimen/space_sm"
        android:src="@drawable/icon_close_button_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/authenticationFormLeftPercentageOffset" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/authenticationFormRightPercentageOffset" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@fraction/authenticationFormTopPercentageOffset" />

</androidx.constraintlayout.widget.ConstraintLayout>