<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/authentication_background">

            <pl.reconizer.cityadventure.presentation.authentication.AuthenticationInput
                android:id="@+id/codeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:label="@string/authentication_code_label"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toTopOf="@id/topGuideline"/>

            <pl.reconizer.cityadventure.presentation.authentication.AuthenticationInput
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:label="@string/authentication_password_label"
                android:layout_marginTop="@dimen/space_xxl"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/codeInput" />

            <pl.reconizer.cityadventure.presentation.authentication.AuthenticationInput
                android:id="@+id/passwordConfirmationInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:label="@string/authentication_password_confirmation_label"
                android:layout_marginTop="@dimen/space_xl"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/passwordInput" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AuthenticationButton"
                android:text="@string/common_confirm"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/passwordConfirmationInput" />

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_md"
                android:paddingTop="@dimen/space_md"
                android:paddingEnd="@dimen/space_sm"
                android:paddingBottom="@dimen/space_sm"
                android:src="@drawable/icon_close_button_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@fraction/authenticationFormLeftPercentageOffset" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@fraction/authenticationFormRightPercentageOffset" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="@fraction/authenticationFormTopPercentageOffset" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>